src/test/ui/rfc-2627-raw-dylib/import-name-type-unknown-value.stderr
error: unknown import name type `unknown`, expected one of: decorated, noprefix, undecorated
  --> $DIR/import-name-type-unknown-value.rs:5:42
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = "unknown")]
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

